templates/redis/statefulset.yml
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis

spec:
  replicas: 1
  serviceName: redis-hl
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/part-of: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        app.kubernetes.io/part-of: immich
    spec:
      automountServiceAccountToken: false
      containers:
        - name: redis
          image: redis:7.2.6
          command:
            - redis-server
          args:
            - /etc/redis/redis.conf
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            initialDelaySeconds: 15
            timeoutSeconds: 5
            tcpSocket:
              port: 6379
          readinessProbe:
            initialDelaySeconds: 15
            timeoutSeconds: 5
            exec:
              command:
                - redis-cli
                - ping
          volumeMounts:
            - name: config
              mountPath: /etc/redis
            - name: data
              mountPath: /data
      volumes:
        - name: config
          configMap:
            name: redis-config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 256Mi
