templates/redis/service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: redis

spec:
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: immich
  ports:
    - name: redis
      port: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: redis-hl

spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: immich
  ports:
    - name: redis
      port: 6379
